030-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: streamsheets
  labels:
    app: streamsheets
    name: streamsheets
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "streamsheets:1.5"
          },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"create-dirs\")].image"
        },
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "streamsheets:1.5"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"streamsheets\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamsheets
  template: 
    metadata:
      labels:
        app: streamsheets
    spec:
      containers:
        - name: streamsheets
          image: streamsheets:1.5
          ports:
            - containerPort: 9000
              protocol: TCP
              name: webui
            - containerPort: 8081
              protocol: TCP
              name: gateway
            - containerPort: 8083
              protocol: TCP
              name: rest
          workingDir: /supervisord
          command:
            - /usr/bin/supervisord
            - -c
            - /etc/supervisord.conf
          volumeMounts:
            - name: data
              mountPath: /var/lib/mongodb
            - name: supervisord
              mountPath: /supervisord
            - name: logs
              mountPath: /var/log
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: streamsheets
        - name: supervisord
          emptyDir: {}
        - name: logs
          emptyDir: {}
