040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamsheets
  labels:
    app: streamsheets
spec:
  type: ClusterIP
  ports:
  - name: webui
    port: 9000
    targetPort: webui
  selector:
    app: streamsheets
